--- a/src/App.css
+++ b/src/App.css
@@ -6,5 +6,11 @@
   height: 90vh;
   overflow: hidden;
   /* background: linear-gradient(#fff, #999); */
-  box-sizing: border-box; 
+  box-sizing: border-box;
+}
+
+.notif-container {
+  width: 450px;
+  display: flex;
+  justify-content: center;
 }
